Add workflow dispatch and push triggers to crawler.yml

--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -36,8 +36,11 @@ on:
     #   "30 0-14 * * *"  → 北京时间 8:00-22:00 每小时第30分钟 / Beijing 8am-10pm
     #
     - cron: "33 * * * *"
-
+  
   workflow_dispatch:
+  
+  push:
+    branches: [master]
 
 concurrency:
   group: crawler-${{ github.ref_name }}
